# general-allocator

./: .gitignore  CMakeLists.txt  CMakePresets.json  format.sh  lint.sh
libs/allocator/: CMakeLists.txt  allocator.c  allocator.h  block.h  utils.c  utils.h
src/: CMakeLists.txt  allocator.c  allocator.h  block.h  main.c  utils.c  utils.h
tests/: CMakeLists.txt  allocator.cc  manual.cc  simple.c  simple.cc  utils.cc  utils.hh
